# XKnowledge

./: .gitignore  README.md  a.ini  build.gradle  ext.gradle  gradle.properties  index.htm  settings.gradle
aidl_client/: build.gradle
aidl_client/src/main/: AndroidManifest.xml
aidl_client/src/main/res/layout/: activity_main.xml
aidl_server/: build.gradle
aidl_server/src/main/: AndroidManifest.xml
android/: build.gradle  customplugin1.gradle  release.xml
android/src/main/: AndroidManifest.xml
android/src/main/assets/jsinvoke/: jsinvoke.html
android/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  Player.cpp  Player.h  VideoChannel.cpp  VideoChannel.h  make_macOS_dylib.sh  native-lib.cpp
android/src/main/cpp/breakpad/: CMakeLists.txt
android/src/main/cpp/breakpad/src/client/linux/handler/: exception_handler.cc
android/src/main/cpp/ffmpeg/libavutil/: ffversion.h
android/src/main/res/anim/: dialog_background_rotate.xml
android/src/main/res/drawable/: shape_login_normal.xml  shape_verify_code_bg.xml  viewpageitem_radiogroup_selector.xml
android/src/main/res/layout/: activity_adb.xml  activity_anonymousclassreference_leak.xml  activity_anr.xml  activity_applink.xml  activity_aspectj.xml  activity_asynclayout.xml  activity_asynctask.xml  activity_asynctaskreference_leak.xml  activity_base_ndk.xml  activity_blockcanary.xml  activity_broadcast_classify.xml  activity_broadcastreceiver_leak.xml  activity_click.xml  activity_covered.xml  activity_crash.xml  activity_custom_permission.xml  activity_custom_viewgroup.xml  activity_danger.xml  activity_data_binding.xml  activity_ffmpeg.xml  (+132 more)
android/src/main/res/layout-h470dp/: activity_navigation.xml
android/src/main/res/layout-w960dp/: activity_navigation.xml
annotation_compiler/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
asmplugin/: build.gradle
customplugin3/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
java/src/main/java/: com_java_xknowledge_se_jni_Register.h  com_java_xknowledge_se_jni_invoke_Invoker.h  com_java_xknowledge_se_jni_reference_Reference.h  com_java_xknowledge_se_jni_static1_Register.h  com_java_xknowledge_se_jni_string_StringTest.h
module1_apk/: build.gradle
module1_apk/src/main/: AndroidManifest.xml
module1_apk/src/main/manifest/: AndroidManifest.xml
module2_apk/: build.gradle
module2_apk/src/main/: AndroidManifest.xml
module2_apk/src/main/manifest/: AndroidManifest.xml
plugin_apk/: build.gradle
plugin_apk/src/main/: AndroidManifest.xml
plugin_core/: build.gradle
plugin_core/src/main/: AndroidManifest.xml
reactnative/: package.json
reactnative/android/: build.gradle
reactnative/android/src/main/: AndroidManifest.xml
router/src/main/: AndroidManifest.xml
xposed/: build.gradle
xposed/src/main/: AndroidManifest.xml
xposed/src/main/assets/: xposed_init
(+1544 files in other folders)
